spec/e2e/operator/negate_nonnum.lit
-"s"; # error: [line 1] Runtime error: Operand must be a number.
